<resources>
    <string name="app_name">揪Fun</string>

    <string name="title_home">首頁</string>
    <string name="title_native">自製菜單</string>
    <string name="title_notification">邀請通知</string>
    <string name="title_history">揪團紀錄</string>
    <string name="title_setup">我的設定</string>
    <string name="title_shop">品牌列表</string>


    <string name="title_brand_story">品牌故事</string>
    <string name="title_brand_news">活動訊息</string>
    <string name="title_brand_product">產品列表</string>
    <string name="title_brand_location">尋找據點</string>


    <string name="privacy_policy">www.iew-pro.com</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_initial">Initial</string>
    <string name="status_code_sent">認證碼已發送</string>
    <string name="status_verification_failed">認證失敗</string>
    <string name="status_verification_succeeded">認證成功</string>
    <string name="status_sign_in_failed">登入失敗</string>
    <string name="status_sign_in_successful">登入成功</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>


    <string name="UserInfo">帳號資訊</string>
    <string name="QRCode">我的條碼:</string>
    <string name="PhoneNO">手機號碼:</string>
    <string name="BasicInfo">基本資料</string>


    <string name="Name">姓名:</string>
    <string name="Gender">性別:</string>
    <string name="Birthday">生日:</string>
    <string name="Address">住址:</string>


    <string name="Member">基本資料</string>
    <string name="Favority">我的好友</string>
    <string name="Group">群組資訊</string>


    <string name="Myorder">我的團購單</string>
    <string name="Myinvite">我的邀請單</string>

    <string name="OrderOnGoing">進行中</string>
    <string name="OrderOnExpired">已逾期</string>

    <string name="OrderStatus">訂單狀態</string>
    <string name="OrderStatistics">回覆統計</string>
    <string name="OrderMaintain">訂單維護</string>

    <string name="NotifyInvite">團購邀請</string>
    <string name="NotifyShipping">到貨通知</string>
    <string name="NotifyOthers">其他訊息</string>


    <string name="admob_app_id">ca-app-pub-6672968234138119~3507792835</string>

    <!-- 測試用 Unit ID  -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="native_ad_unit_id">ca-app-pub-3940256099942544/1044960115</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- 真正用 Unit ID
    <string name="banner_ad_unit_id">ca-app-pub-6672968234138119/1707410409</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6672968234138119/5442571472</string>
    <string name="native_ad_unit_id">ca-app-pub-6672968234138119/2070588086</string>
-->

</resources>
