<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/navigation_my_shop"
        android:icon="@drawable/tabbaritem_shop"
        android:title="@string/title_shop"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tabbaritem_native"
        android:title="@string/title_native"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tabbaritem_notify"
        android:title="@string/title_notification"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/tabbaritem_history"
        android:title="@string/title_history"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_my_setup"
        android:icon="@drawable/tabbaritem_me"
        android:title="@string/title_setup"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"/>



    <!--
     android:orderInCategory="100"
     app:actionViewClass="com.tooltip.TooltipActionView"
     app:showAsAction="always"/> -->


</menu>
