<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_brand_story"
        android:icon="@drawable/tabbaritem_shop"
        android:title="@string/title_brand_story"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_brand_news"
        android:icon="@drawable/tabbaritem_native"
        android:title="@string/title_brand_news"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/navigation_brand_product"
        android:icon="@drawable/tabbaritem_notify"
        android:title="@string/title_brand_product"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_brand_location"
        android:icon="@drawable/tabbaritem_history"
        android:title="@string/title_brand_location"
        app:actionViewClass="com.tooltip.TooltipActionView"
        app:showAsAction="ifRoom"
        />

</menu>
